--- a/degree.html
+++ b/degree.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="navbar">
             <ul>
-                <li><a href="aboutMe.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="degree.html">Degree</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -118,5 +118,6 @@
     <p>Contact Info: s4126823@student.rmit.edu.au</p>
     <p>©2025 Raphael Manalo. All rights reserved. </p>
 </footer>
+
 
 </html>
