--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="navbar">
             <ul>
-                <li><a href="aboutMe.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="degree.html">Degree</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -48,4 +48,5 @@
         <p>Contact Info: 4126823@student.rmit.edu.au</p>
         <p>©2025 Raphael Manalo. All rights reserved. </p>
     </footer>
+
 </html>
