Created assets folder, moved appropriate files and edited appropriate file paths

--- a/degree.html
+++ b/degree.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>Degree</title>
 </head>
 
 <body>
     <header>
-        <img src="rmitlogo.jpg" alt="rmitlogo" class="rmitlogo">
+        <img src="assets/rmitlogo.jpg" alt="rmitlogo" class="rmitlogo">
         <h1> Raphael Manalo</h1>
         <p>Raphael Julian Manalo S4126823 - Current student at RMIT Univeristy</p>
         
