--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/styles.css">
     <title>My Website</title>
 </head>
 
 <body>
 
     <header>
-        <img src="rmitlogo.jpg" alt="rmitlogo" class="rmitlogo">
+        <img src="assets/rmitlogo.jpg" alt="rmitlogo" class="rmitlogo">
         <h1> Raphael Manalo</h1>
         <p>Raphael Julian Manalo S4126823 - Current student at RMIT Univeristy</p>
 
@@ -19,7 +19,7 @@
     <nav>
         <div class="navbar">
             <ul>
-                <li><a href="Index.html">About</a></li>
+                <li><a href="index.html">About</a></li>
                 <li><a href="degree.html">Degree</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -32,8 +32,8 @@
             <div class ="row">
                  <div class="sidebar">
                   <div class="photoofme">
-                        <a target="_blank" href="me and my partner.JPG"> 
-                        <img src="me and my partner.JPG" alt=""></a>
+                        <a target="_blank" href="assets/me and my partner.JPG"> 
+                        <img src="assets/me and my partner.JPG" alt=""></a>
                         <div class="desc">My partner and I at the peak of Mt Batur in Bali earlier this year.</div> 
                  </div>  
                  <h2>About Me</h2>
@@ -60,18 +60,18 @@
 
                      <div class="gallary">
 
-                         <div class="gallary-item"><a target="_blank" href="banhmi.jpg">
-                         <img src="banhmi.jpg" alt=""></a>
+                         <div class="gallary-item"><a target="_blank" href="assets/banhmi.jpg">
+                         <img src="assets/banhmi.jpg" alt=""></a>
                              <div class="desc">Roast Pork Banh Mi from Luke's Bakery</div>
                          </div>
 
-                         <div class="gallary-item"><a target="_blank" href="tuna_tartare.jpg">
-                         <img src="tuna_tartare.jpg" alt=""></a>
+                         <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
+                         <img src="assets/tuna_tartare.jpg" alt=""></a>
                              <div class="desc">Tuna Tartare from Nobu</div>
                          </div>
 
-                         <div class="gallary-item"><a target="_blank" href="gyoza.jpg">
-                         <img src="gyoza.jpg" alt=""></a>
+                         <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
+                         <img src="assets/gyoza.jpg" alt=""></a>
                              <div class="desc">Pork Gyoza from Nobu</div>
                          </div>
 
