Added styling for embed youtube video and added the video itself to the index

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                          </div>
 
                      </div>
+                     <iframe src="https://www.youtube.com/watch?v=I-cvl9MK0N0&list=RDI-cvl9MK0N0&start_radio=1&ab_channel=TheBeachesautoplay=1"></iframe>
+
+
 
                  </div>
 
