fixed link i hope

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                          </div>
 
                      </div>
-                     <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?list=RDI-cvl9MK0N0?autoplay=1" title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
+                     <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?autoplay=1" title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
 
 
 
