Added functionality to contact form

--- a/contact.html
+++ b/contact.html
@@ -30,14 +30,14 @@
             <div class ="row">
                  <div class="sidebar">
                  <h2>Contact Me</h2>
-                 <form target="self">
-                 <label for="name">Name:</label><br>
+                 <form action="https://formspree.io/f/mjkelgwb"method="POST">
+                 <label for="name">Your name:</label><br>
                  <input type="text" id="name" name="name"><br>
-                 <label for="email">Email</label><br>
+                 <label for="email">Your email</label><br>
                  <input type="text" id="email" name="email"><br>
-                 <label for="message">Message:</label><br>
+                 <label for="message">Your message:</label><br>
                  <textarea class = "textfield" name="message"></textarea><br><br>
-                 <input type="submit" value="Submit">
+                 <button type="submit">Send</button> 
                  </form>
                  </div>
              </div>
