Added career goals to about me section

--- a/index.html
+++ b/index.html
@@ -28,60 +28,80 @@
 
 
     <main>
-        <section>    
-            <div class ="row">
-                 <div class="sidebar">
-                  <div class="photoofme">
-                        <a target="_blank" href="assets/me and my partner.JPG"> 
-                        <img src="assets/me and my partner.JPG" alt=""></a>
-                        <div class="desc">My partner and I at the peak of Mt Batur in Bali earlier this year.</div> 
-                 </div>  
-                 <h2>About Me</h2>
-                 
+        <section>
+            <div class="row">
+                <div class="sidebar">
+                    <div class="photoofme">
+                        <a target="_blank" href="assets/me and my partner.JPG">
+                            <img src="assets/me and my partner.JPG" alt=""></a>
+                        <div class="desc">My partner and I at the peak of Mt Batur in Bali earlier this year.</div>
+                    </div>
+                    <h2>About Me</h2>
 
-                 <p>Hi, my name is Raphael Julian Manalo. I am currently a 22 year old student at RMIT, studying an Associate's Degree in Information Technology.
-                 <br>I was born and raised in Melbourne, Australia. I am of Filipino ethnicity, with both of my parents being born in the Philippines. 
-                 <br>In my free time I enjoy playing games, watching movies, going to the gym and spending time with friends.
-                 </p>   
-                 <p>Other facts about me:</p>
-                 <ul>
-                     <li>I am 5'7".</li>
-                     <li>I have a sister 5 years my Junior.</li>
-                     <li>I LOVE food, some of my favourites being <a href="https://en.wikipedia.org/wiki/Steak_tartare">Beef Tartare</a>, 
-                    <a href="https://www.google.com/search?sca_esv=6b693d07bb019c16&rlz=1C1ONGR_enAU1119AU1119&sxsrf=AE3TifPPFZOO99ujGFlCKmBBqOKofSHW7A:1756361374432&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENwnGygERInUV_0g0XKeHGJRAdFPaX_SSIJt7xYUfpm-75lA8Uar42yNWdqGuJlUAnl4VoyIc9TvIZo00AnzLuo73CKalUXQ8cWgmottQs4BXh0bU9aRqLPpzWejdabGFvk-MuP83mUuK41Ro6dMLX7Czip9A&q=pork+gyoza&sa=X&ved=2ahUKEwjs28f-66yPAxWQglYBHfaGNsYQtKgLegQIGBAB&biw=1280&bih=631&dpr=1.5">Pork Gyoza</a>, 
-                    <a href="https://www.google.com/search?sca_esv=6b693d07bb019c16&rlz=1C1ONGR_enAU1119AU1119&sxsrf=AE3TifMjo0gC30DyqO_tY8BXlgqfWq4RJg:1756361339523&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zEMZldv_eRjZ2XLYc5GnVnME7glWodDcaQwvGYJtospyF9KU_GlqZnXTjKdHMkDSoriVaOqsl1BHJg0qPHBCFkkMO_z2-zedkTi4QisJPp0imefir9hyvb6u81jJR5vClt_FEEH8vkgQM7IKVP9xYhpIz6wS4Q&q=tuna+sashimi&sa=X&ved=2ahUKEwjigvXt66yPAxXd3zQHHYVWK0MQtKgLegQIExAB&biw=1280&bih=631&dpr=1.5">Tuna Sashimi</a>, and <a href="https://www.lukesbanhmi.au/">Banh Mi.</a>
-                    <br>P.S - The best Pork Gyozas in Melbourne are from <a href="https://komeyui.com.au/mel/">Komeyui</a> hehe.
-                     </li>
-                     <li>My partner and I have been together for 4 amazing years🧡</li>
-                  </ul>
-                 </div>      
 
-                 <div class="article">
+                    <p>Hi, my name is Raphael Julian Manalo. I am currently a 22 year old student at RMIT, studying an
+                        Associate's Degree in Information Technology.
+                        <br>I was born and raised in Melbourne, Australia. I am of Filipino ethnicity, with both of my
+                        parents being born in the Philippines.
+                        <br>In my free time I enjoy playing games, watching movies, going to the gym and spending time
+                        with friends.
+                    </p>
+                    <p>Other facts about me:</p>
+                    <ul>
+                        <li>I am 5'7".</li>
+                        <li>I have a sister 5 years my Junior.</li>
+                        <li>I LOVE food, some of my favourites being <a
+                                href="https://en.wikipedia.org/wiki/Steak_tartare">Beef Tartare</a>,
+                            <a
+                                href="https://www.google.com/search?sca_esv=6b693d07bb019c16&rlz=1C1ONGR_enAU1119AU1119&sxsrf=AE3TifPPFZOO99ujGFlCKmBBqOKofSHW7A:1756361374432&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zENwnGygERInUV_0g0XKeHGJRAdFPaX_SSIJt7xYUfpm-75lA8Uar42yNWdqGuJlUAnl4VoyIc9TvIZo00AnzLuo73CKalUXQ8cWgmottQs4BXh0bU9aRqLPpzWejdabGFvk-MuP83mUuK41Ro6dMLX7Czip9A&q=pork+gyoza&sa=X&ved=2ahUKEwjs28f-66yPAxWQglYBHfaGNsYQtKgLegQIGBAB&biw=1280&bih=631&dpr=1.5">Pork
+                                Gyoza</a>,
+                            <a
+                                href="https://www.google.com/search?sca_esv=6b693d07bb019c16&rlz=1C1ONGR_enAU1119AU1119&sxsrf=AE3TifMjo0gC30DyqO_tY8BXlgqfWq4RJg:1756361339523&udm=2&fbs=AIIjpHxU7SXXniUZfeShr2fp4giZ1Y6MJ25_tmWITc7uy4KIeioyp3OhN11EY0n5qfq-zEMZldv_eRjZ2XLYc5GnVnME7glWodDcaQwvGYJtospyF9KU_GlqZnXTjKdHMkDSoriVaOqsl1BHJg0qPHBCFkkMO_z2-zedkTi4QisJPp0imefir9hyvb6u81jJR5vClt_FEEH8vkgQM7IKVP9xYhpIz6wS4Q&q=tuna+sashimi&sa=X&ved=2ahUKEwjigvXt66yPAxXd3zQHHYVWK0MQtKgLegQIExAB&biw=1280&bih=631&dpr=1.5">Tuna
+                                Sashimi</a>, and <a href="https://www.lukesbanhmi.au/">Banh Mi.</a>
+                            <br>P.S - The best Pork Gyozas in Melbourne are from <a
+                                href="https://komeyui.com.au/mel/">Komeyui</a> hehe.
+                        </li>
+                        <li>My partner and I have been together for 4 amazing years🧡</li>
+                    </ul>
 
-                     <div class="gallary">
+                    <h3>Future Goals</h3>
+                    <p>While minor details change in my head depending on the day, the general ideas are ultimately the
+                        same. I would like to pursue a career in the software side of the business/corporate landscape,
+                        whether that's in data science, information systems, predictive analytics or any software
+                        department for matter. <br> I feel as if the business field would allow for the work that is
+                        done, to be presented and ultilised in a more meaningful and practical manner. I feel like the
+                        more hands-on nature of working for a client in a team enviroment would be the best use of my
+                        skills and abilities. Plus big business = big money (just in exchange for you soul but its okay
+                        if money up) </p>
+                </div>
 
-                         <div class="gallary-item"><a target="_blank" href="assets/banhmi.jpg">
-                         <img src="assets/banhmi.jpg" alt=""></a>
-                             <div class="desc">Roast Pork Banh Mi from Luke's Bakery</div>
-                         </div>
+                <div class="article">
 
-                         <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
-                         <img src="assets/tuna_tartare.jpg" alt=""></a>
-                             <div class="desc">Tuna Tartare from Nobu</div>
-                         </div>
+                    <div class="gallary">
 
-                         <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
-                         <img src="assets/gyoza.jpg" alt=""></a>
-                             <div class="desc">Pork Gyoza from Nobu</div>
-                         </div>
-                         <div class="youtubevid">
-                         <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?autoplay=1&mute=1" title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
-                         <div class="desc">One of my favourite songs at the moment - The Beaches "Jocelyn"</div>
-                        </div>
-                     </div>
-                     
+                        <div class="gallary-item"><a target="_blank" href="assets/banhmi.jpg">
+                                <img src="assets/banhmi.jpg" alt=""></a <div class="desc">Roast Pork Banh Mi from Luke's
+                            Bakery</div>
+                    </div>
 
-                 </div>
+                    <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
+                            <img src="assets/tuna_tartare.jpg" alt=""></a>
+                        <div class="desc">Tuna Tartare from Nobu</div>
+                    </div>
+
+                    <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
+                            <img src="assets/gyoza.jpg" alt=""></a>
+                        <div class="desc">Pork Gyoza from Nobu</div>
+                    </div>
+                    <div class="youtubevid">
+                        <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?autoplay=1&mute=1"
+                            title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
+                        <div class="desc">One of my favourite songs at the moment - The Beaches "Jocelyn"</div>
+                    </div>
+                </div>
+
+
+            </div>
 
             </div>
 
@@ -91,8 +111,8 @@
 
 
     <footer>
-            <p>Contact Info: s4126823@student.rmit.edu.au</p>
-            <p>©2025 Raphael Manalo. All rights reserved. </p>
+        <p>Contact Info: s4126823@student.rmit.edu.au</p>
+        <p>©2025 Raphael Manalo. All rights reserved. </p>
     </footer>
 
 </body>
