--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                         department for matter. <br> I feel as if the business field would allow for the work that is
                         done, to be presented and ultilised in a more meaningful and practical manner. I feel like the
                         more hands-on nature of working for a client in a team enviroment would be the best use of my
-                        skills and abilities. Plus big business = big money (just in exchange for you soul but its okay
-                        if money up) </p>
+                        skills and abilities. Plus big business = big money (just in exchange for your soul but that's
+                        no biggie). </p>
                 </div>
 
                 <div class="article">
@@ -80,28 +80,28 @@
                     <div class="gallary">
 
                         <div class="gallary-item"><a target="_blank" href="assets/banhmi.jpg">
-                                <img src="assets/banhmi.jpg" alt=""></a <div class="desc">Roast Pork Banh Mi from Luke's
-                            Bakery</div>
+                                <img src="assets/banhmi.jpg" alt=""></a>
+                            <div class="desc">Roast Pork Banh Mi from Luke'sBakery</div>
+                        </div>
+
+                        <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
+                                <img src="assets/tuna_tartare.jpg" alt=""></a>
+                            <div class="desc">Tuna Tartare from Nobu</div>
+                        </div>
+
+                        <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
+                                <img src="assets/gyoza.jpg" alt=""></a>
+                            <div class="desc">Pork Gyoza from Nobu</div>
+                        </div>
+                        <div class="youtubevid">
+                            <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?autoplay=1&mute=1"
+                                title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
+                            <div class="desc">One of my favourite songs at the moment - The Beaches "Jocelyn"</div>
+                        </div>
                     </div>
 
-                    <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
-                            <img src="assets/tuna_tartare.jpg" alt=""></a>
-                        <div class="desc">Tuna Tartare from Nobu</div>
-                    </div>
 
-                    <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
-                            <img src="assets/gyoza.jpg" alt=""></a>
-                        <div class="desc">Pork Gyoza from Nobu</div>
-                    </div>
-                    <div class="youtubevid">
-                        <iframe src="https://www.youtube.com/embed/I-cvl9MK0N0?autoplay=1&mute=1"
-                            title="The Beaches - Jocelyn (Official Lyric Video)"></iframe>
-                        <div class="desc">One of my favourite songs at the moment - The Beaches "Jocelyn"</div>
-                    </div>
                 </div>
-
-
-            </div>
 
             </div>
 
