added extra documentation to css and added a column layout to future use

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <main>
         <section>
-            <div class="row">
+            <div class="column">
                 <div class="sidebar">
                     <div class="photoofme">
                         <a target="_blank" href="assets/me and my partner.JPG">
