changed degree page to row and contact page to column layout

--- a/degree.html
+++ b/degree.html
@@ -26,7 +26,7 @@
     </nav>
     <main>
         <section>
-            <div class="row">
+            <div class="column">
                 <div class="sidebar">
                     <h2>Associate's Degree in IT</h2>
                     <h3>First Semester Courses: </h3>
