--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
     <main>
         <section>
-            <div class="row">
+            <div class="column">
                 <div class="sidebar">
                     <h2>Contact Me</h2>
                     <form action="https://formspree.io/f/mjkelgwb" method="POST">
