added placeholder details in contact to fill space and swapped the sidebar and article content in degree

--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,12 @@
                         <button type="submit">Send</button>
                     </form>
                 </div>
+                <div class="article">
+                    <h2>Other Ways to Contact Me</h2>
+                    <p>If you would like to contact me through other means, you can find me on the following platforms:</p>
+                    <ul>
+                        <li><a href="https://www.linkedin.com/in/raphael-manalo-5b4b6b1b4/">LinkedIn</a></li>
+                </div>
             </div>
         </section>
     </main>
