specified alts for images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="sidebar">
                     <div class="photoofme">
                         <a target="_blank" href="assets/me and my partner.JPG">
-                            <img src="assets/me and my partner.JPG" alt=""></a>
+                            <img src="assets/me and my partner.JPG" alt="My partner and I at the peak of Mt Batur in Bali earlier this year."></a>
                         <div class="desc">My partner and I at the peak of Mt Batur in Bali earlier this year.</div>
                     </div>
                     <h2>About Me</h2>
@@ -80,17 +80,17 @@
                     <div class="gallary">
 
                         <div class="gallary-item"><a target="_blank" href="assets/banhmi.jpg">
-                                <img src="assets/banhmi.jpg" alt=""></a>
-                            <div class="desc">Roast Pork Banh Mi from Luke'sBakery</div>
+                                <img src="assets/banhmi.jpg" alt="Roast Pork Banh Mi from Luke's Bakery"></a>
+                            <div class="desc">Roast Pork Banh Mi from Luke's Bakery</div>
                         </div>
 
                         <div class="gallary-item"><a target="_blank" href="assets/tuna_tartare.jpg">
-                                <img src="assets/tuna_tartare.jpg" alt=""></a>
+                                <img src="assets/tuna_tartare.jpg" alt="Tuna Tartare from Nobu"></a>
                             <div class="desc">Tuna Tartare from Nobu</div>
                         </div>
 
                         <div class="gallary-item"><a target="_blank" href="assets/gyoza.jpg">
-                                <img src="assets/gyoza.jpg" alt=""></a>
+                                <img src="assets/gyoza.jpg" alt="Pork Gyoza from Nobu"></a>
                             <div class="desc">Pork Gyoza from Nobu</div>
                         </div>
                         <div class="youtubevid">
