changed copyright symbol to proper form and added github link to contacts

--- a/degree.html
+++ b/degree.html
@@ -163,7 +163,7 @@
 
     <footer>
         <p>Contact Info: s4126823@student.rmit.edu.au</p>
-        <p>©2025 Raphael Manalo. All rights reserved. </p>
+        <p>&copy2025 Raphael Manalo. All rights reserved. </p>
     </footer>
 </body>
 
