added " to close the src attribute

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     <div class="gallary">
                     
                         <div class="gallary-item"><a target="_blank" href="https://github.com/s4126823/raphaelmanalo.github.io">
-                                <img src="assets/github.png alt="Github link"></a>
+                                <img src="assets/github.png" alt="Github link"></a>
                             <div class="desc">Github page for this Website</div>
                         </div>
                     
