change icon for instagram link

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         </div>
                     
                         <div class="gallary-item"><a target="_blank" href="https://www.instagram.com/rjmanalo._/">
-                                <img src="https://www.clipartmax.com/png/small/137-1375223_instagram-icon-design-vector-logo-instagram-png.png" alt="Instagram Link"></a>
+                                <img src="assets/instagram_icon.png" alt="Instagram Link"></a>
                         </div>
                     
                         <div class="gallary-item"><a target="_blank" href="https://wa.me/61419731090">
